# Ai-chatbot-book

./: New Text Document (2).txt  New Text Document.txt  README.md  docusaurus.config.ts  last promt.txt  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.conversations/: history.sqlite  history.sqlite-shm  history.sqlite-wal
api/: index.py
backend/: .gitignore  README.md  agent.py  api.py  crawler.py  main.py  processor.py  pyproject.toml  retrieve.py  storage.py  test_api.py
backend/.conversations/: history.sqlite  history.sqlite-shm  history.sqlite-wal
backend/tests/: conftest.py  test_agent.py  test_crawler.py  test_processor.py  test_retrieve.py  test_storage.py
docs/chapter-02-actuators-and-control/: 01-introduction-to-actuators.md  02-electric-motors.md  03-motor-control-loops.md  _category_.json
docs/chapter-03-robot-operating-system/: 01-ros2-basics.md  02-nodes-topics-services.md  03-creating-packages.md  _category_.json
docs/chapter-04-computer-vision/: 01-camera-models.md  02-opencv-basics.md  03-object-detection-yolo.md  _category_.json
docs/chapter-05-reinforcement-learning/: 01-rl-fundamentals.md  02-gym-environments.md  03-training-ppo-agent.md  _category_.json
docs/chapter-06-edge-deployment/: 01-edge-hardware-overview.md  02-optimizing-models-onnx-tensorrt.md  03-deployment-pipeline.md  _category_.json
specs/001-book-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+75 files in other folders)
